--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - "v*"
+      - "backon-macros-v*"
 
 jobs:
   publish:
@@ -12,12 +13,22 @@ jobs:
     environment: release
     permissions:
       id-token: write
+    strategy:
+      matrix:
+        include:
+          - crate: backon
+            manifest: backon/Cargo.toml
+            tag_prefix: v
+          - crate: backon-macros
+            manifest: backon-macros/Cargo.toml
+            tag_prefix: backon-macros-v
+    if: ${{ startsWith(github.ref_name, matrix.tag_prefix) }}
     steps:
       - uses: actions/checkout@v5
       - name: Authenticate with crates.io
         uses: rust-lang/crates-io-auth-action@v1
         id: auth
       - name: Publish to crates.io
-        run: cargo publish -p backon
+        run: cargo publish -p ${{ matrix.crate }}
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
